--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "Aitech-CI",
+  "name": "aitech-cI",
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev --dir ./emails --port 3001"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.26",
     "bootstrap": "^5.3.3",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "next": "14.2.0",
+    "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.5.3",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^18",
     "react-modal-video": "^2.0.2",
     "react-photo-view": "^1.2.6",
     "react-rangeslider": "^2.2.0",
     "react-simple-scroll-up": "^0.2.3",
     "react-toastify": "^10.0.5",
+    "resend": "4.0.1-alpha.0",
     "swiper": "^11.1.12",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "typescript": "^5"
   }
 }
